rolagem do cardapio e contatos

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             <ul>
                 <img src="imagens/logopreta.jpeg" alt="" class="logoheader">
                 <li><a href="#">Início</a></li>
-                <li><a href="#">Cardápio</a></li>
+                <li><a href="#cardapio">Cardápio</a></li>
                 <div class="logo-contato">
-                    <img src="imagens/logo-instagram.jpg" alt="" class="logo-instagram">
-                    <img src="imagens/whats-icon.png.webp" alt="" class="logo-zap">
+                    <a href="https://www.instagram.com/rotadolancheab"><img src="imagens/logo-instagram.jpg" alt="" class="logo-instagram"></a>
+                    <a href="https://wa.me/5516997521019"><img src="imagens/whats-icon.png.webp" alt="" class="logo-zap"></a>
                 </div>
 
             </ul>
@@ -34,7 +34,7 @@
 
             
         </article>
-        <section>
+        <section id="cardapio">
             <h1>Cardápio</h1>
         
             <div class="containerLanche">
