deixando o site responsivo

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
                 <li><a href="#cardapio">Cardápio</a></li>
                 <div class="logo-contato">
                     <a href="https://www.instagram.com/rotadolancheab"><img src="imagens/logo-instagram.jpg" alt="" class="logo-instagram"></a>
-                    <a href="https://wa.me/5516997521019"><img src="imagens/whats-icon.png.webp" alt="" class="logo-zap"></a>
+                    <a href="https://wa.me/5516997521019
+                    "><img src="imagens/whats-icon.png.webp" alt="" class="logo-zap"></a>
                 </div>
 
             </ul>
