carrinho fixo na tela

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <p>Pão, maionese, ketchup, mostarda, 4 carnes, 2 ovos, 2 salsichas, presunto, queijo, bacon, tomate, cebola, alface e batata palha.</p>
     </div><br>
     <h4>R$ 34,00</h4>
-    <button class="btn-pedir" data-nome="X-RODA DO LANCHE" data-preco="34.00">Pedir</button>
+    <button class="btn-pedir" data-nome="X-ROTA DO LANCHE" data-preco="34.00">Pedir</button>
     </div> 
 
     <div class="lanche">
