carrinho de compras

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="estilos/style.css">
         <link rel="stylesheet" href="estilos/mobile.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=menu" />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=shopping_cart" /> 
         <title>HamburgueriaHery</title>
     </head>
     <body>
@@ -22,6 +22,9 @@
                     " target="_blank"><img src="imagens/whats-icon.png.webp" alt="icone do whatszap" class="logo-zap"></a>
                 </div>
             </ul>
+            <span class="material-symbols-outlined">
+                shopping_cart
+                </span>
         </nav>
     </header> 
     <!-- Corpo -->
