algumas foto dos lanches

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>   
 
         <div class="lanche">
-            <img src="imagens/lancheCardapio1" alt="imagem do lanche">   
+            <img src="imagens/x-salada.jpeg" alt="">   
     <div class="descricao">
         <h2 class="titulo-lanche" data-pedido="Lanche 2">X-SALADA</h2>
         <p>Pão, maionese, ketchup, mostarda, carne, presunto, queijo, bacon, tomate, cebola, alface e batata palha.</p>
@@ -79,7 +79,7 @@
     </div> 
 
     <div class="lanche">
-        <img src="imagens/lancheCardapio1" alt="imagem do lanche">   
+        <img src="imagens/x-tudo.jpeg" alt="x-tudo">
     <div class="descricao">
         <h2 class="titulo-lanche" data-pedido="Lanche 4">X-TUDO</h2>
         <p>Pão, maionese, ketchup, mostarda, carne, presunto, queijo, bacon, salsicha, ovo, tomate, cebola, alface e batata palha.</p>
@@ -89,7 +89,7 @@
     </div> 
 
     <div class="lanche">
-        <img src="imagens/lancheCardapio1" alt="imagem do lanche">   
+        <img src="imagens/x-tudo-duplo.jpeg" alt="x-tudo-duplo">  
     <div class="descricao">
         <h2 class="titulo-lanche" data-pedido="Lanche 5">X-TUDO DUPLO</h2>
         <p>Pão, maionese, ketchup, mostarda, 2 carnes, 2 salsichas, 2 ovos, presunto, queijo, bacon, tomate, cebola, alface e batata palha.</p>
@@ -108,8 +108,8 @@
     <button class="btn-pedir" data-nome="X-BACON" data-preco="24.00">Pedir</button>
     </div> 
 
-    <div class="lanche">
-        <img src="imagens/lancheCardapio1" alt="imagem do lanche">   
+    <div class="lanche">   
+        <img src="imagens/x-egg.jpeg" alt="">
     <div class="descricao">
         <h2 class="titulo-lanche" data-pedido="Lanche 7">X-EGG</h2>
         <p>Pão, maionese, ketchup, mostarda, ovo, presunto, queijo, bacon, tomate, cebola, alface e batata palha.</p>
@@ -119,7 +119,7 @@
     </div>
 
     <div class="lanche">
-        <img src="imagens/lancheCardapio1" alt="imagem do lanche">   
+        <img src="imagens/x-frango.jpeg" alt="">
     <div class="descricao">
         <h2 class="titulo-lanche" data-pedido="Lanche 8">X-FRANGO</h2>
         <p>Pão, maionese, ketchup, mostarda, filé de frango, presunto, queijo, bacon, tomate, cebola, alface e batata palha.</p>
@@ -129,7 +129,7 @@
     </div> 
 
     <div class="lanche">
-        <img src="imagens/lancheCardapio1" alt="imagem do lanche">   
+        <img src="imagens/x-rota-do-lanche.jpeg" alt="">  
     <div class="descricao">
         <h2 class="titulo-lanche" data-pedido="Lanche 9">X-ROTA DO LANCHE</h2>
         <p>Pão, maionese, ketchup, mostarda, 4 carnes, 2 ovos, 2 salsichas, presunto, queijo, bacon, tomate, cebola, alface e batata palha.</p>
@@ -139,7 +139,7 @@
     </div> 
 
     <div class="lanche">
-        <img src="imagens/lancheCardapio1" alt="imagem do lanche">   
+        <img src="imagens/x-calabresa.jpeg" alt=""> 
     <div class="descricao">
         <h2 class="titulo-lanche" data-pedido="Lanche 10">X-CALABRESA</h2>
         <p>Pão, maionese, ketchup, mostarda, calabresa, presunto, queijo, bacon, tomate, cebola, alface e batata palha.</p>
