adicionei bebidas no carrinho

--- a/index.html
+++ b/index.html
@@ -43,9 +43,42 @@
         <p><strong>Total: R$ <span id="total">0.00</span></strong></p>
         <button id="btnEnviarPedido"><a href="https://wa.me/5516997521019" target="_blank">Enviar Pedido</a></button>
     </section>
+
+    <aside class="refrigerantes">
+        <h1>Bebidas</h1>
+        <div class="containerBebidas">
+            <div class="bebidas">
+        <div class="descricao">
+            <h2 class="titulo-bebidas" data-pedido="bebida 1">Refrigerante lata</h2>
+        </div><br>
+        <h4>R$ 5,50</h4>
+        <img src="imagens/refrilata2.jpeg" alt="">
+        <button class="btn-pedir" data-nome="Refrigerante lata" data-preco="5.50">Pedir</button>
+        </div>
+
+            <div class="bebidas">
+        <div class="descricao">
+            <h2 class="titulo-bebidas" data-pedido="Lanche 1">Refrigerante 2L (Poty, Roller)</h2>
+        </div><br>
+        <h4>R$ 9,50</h4>
+        <img src="imagens/potyroller.jpeg" alt="">
+        <button class="btn-pedir" data-nome="Refrigerante 2L (Poty, Roller)" data-preco="09.50">Pedir</button>
+        </div>
+
+            <div class="bebidas">
+        <div class="descricao">
+            <h2 class="titulo-bebidas" data-pedido="Lanche 1">Coca-Cola 2L</h2>
+        </div><br>
+        <h4>R$ 14,00</h4>
+        <img src="imagens/coca-cola.jpeg" alt="">
+        <button class="btn-pedir" data-nome="Coca-Cola 2L" data-preco="14.00">Pedir</button>
+        </div>
+        </div>
+    </aside>
+
         <section id="cardapio">
             <h1>Cardápio</h1>
-        
+
             <div class="containerLanche">
                 <div class="lanche">
                     <img src="imagens/lancheCardapio1" alt="imagem do lanche">   
