--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <img src="imagens/logopreta.jpeg" alt="" class="logoheader">
                 <li><a href="#">Início</a></li>
                 <li><a href="#cardapio">Cardápio</a></li>
+                <li><a href="#bebidas">Bebidas</a></li>
                 <div class="logo-contato">
                     <a href="https://www.instagram.com/rotadolancheab" target="_blank"><img src="imagens/logo-instagram.jpg" alt="logo rota do lanche" class="logo-instagram"></a>
                     <a href="https://wa.me/5516997521019
@@ -44,7 +45,7 @@
         <button id="btnEnviarPedido"><a href="https://wa.me/5516997521019" target="_blank">Enviar Pedido</a></button>
     </section>
 
-    <aside class="refrigerantes">
+    <aside class="refrigerantes" id="bebidas">
         <h1>Bebidas</h1>
         <div class="containerBebidas">
             <div class="bebidas">
@@ -52,7 +53,7 @@
             <h2 class="titulo-bebidas" data-pedido="bebida 1">Refrigerante lata</h2>
         </div><br>
         <h4>R$ 5,50</h4>
-        <img src="imagens/refrilata2.jpeg" alt="">
+        <img src="imagens/refrilata2.jpeg" alt=""><br>
         <button class="btn-pedir" data-nome="Refrigerante lata" data-preco="5.50">Pedir</button>
         </div>
 
@@ -61,18 +62,16 @@
             <h2 class="titulo-bebidas" data-pedido="Lanche 1">Refrigerante 2L (Poty, Roller)</h2>
         </div><br>
         <h4>R$ 9,50</h4>
-        <img src="imagens/potyroller.jpeg" alt="">
+        <img src="imagens/potyroller.jpeg" alt=""><br>
         <button class="btn-pedir" data-nome="Refrigerante 2L (Poty, Roller)" data-preco="09.50">Pedir</button>
         </div>
-
             <div class="bebidas">
         <div class="descricao">
             <h2 class="titulo-bebidas" data-pedido="Lanche 1">Coca-Cola 2L</h2>
         </div><br>
         <h4>R$ 14,00</h4>
-        <img src="imagens/coca-cola.jpeg" alt="">
+        <img src="imagens/coca-cola.jpeg" alt=""><br>
         <button class="btn-pedir" data-nome="Coca-Cola 2L" data-preco="14.00">Pedir</button>
-        </div>
         </div>
     </aside>
 
