--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
 
             <div class="bebidas">
         <div class="descricao">
-            <h2 class="titulo-bebidas" data-pedido="Lanche 1">Refrigerante 2L (Poty, Roller)</h2>
         </div><br>
-        <h4>R$ 9,50</h4>
         <img src="imagens/potyroller.jpeg" alt=""><br>
+        <h2 class="titulo-bebidas" data-pedido="Lanche 1">Poty, Roller 2L</h2>
+        <h4>R$ 9,50</h4>
         <button class="btn-pedir" data-nome="Refrigerante 2L (Poty, Roller)" data-preco="09.50">Pedir</button>
-        </div>
+    </div>
             <div class="bebidas">
         <div class="descricao">
             <h2 class="titulo-bebidas" data-pedido="Lanche 1">Coca-Cola 2L</h2>
