enviando pedido direto pro zap

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="descricao">
         </div><br>
         <img src="imagens/potyroller.jpeg" alt=""><br>
-        <h2 class="titulo-bebidas" data-pedido="Lanche 1">Poty, Roller 2L</h2>
+        <h2 class="titulo-bebidas" data-pedido="Lanche 1">Poty ou Roller 2L</h2>
         <h4>R$ 9,50</h4>
         <button class="btn-pedir" data-nome="Refrigerante 2L (Poty, Roller)" data-preco="09.50">Pedir</button>
     </div>
