enviar pedido com js

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <h2>Seu Carrinho</h2>
         <ul id="listaCarrinho"></ul>
         <p><strong>Total: R$ <span id="total">0.00</span></strong></p>
-        <button id="btnEnviarPedido"><a href="https://wa.me/5516997521019" target="_blank">Enviar Pedido</a></button>
+        <button id="btnEnviarPedido">Enviar Pedido</button>
     </section>
 
     <aside class="refrigerantes" id="bebidas">
